# flutter_soloud

./: .gitignore  CHANGELOG.md  README.md  build.md  pubspec.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/filters/: parametric_eq.dart
example/lib/mixing_bus/: mixing_bus.dart
example/macos/: Podfile
example/macos/Runner.xcodeproj/: project.pbxproj
example/tests/: test_libs.dart  tests.dart
example/tests/tests/: all_instances_finished.dart  all_tests.dart  async_multi_load.dart  asynchronous_deinit.dart  auto_dispose.dart  buffer_stream_small_mp3.dart  common.dart  create_notes.dart  global_filters.dart  handles.dart  looping.dart  pan.dart  play_seek_pause.dart  protect_voice.dart  sound_filters.dart  stop_futures.dart  synchronous_deinit.dart  voice_groups.dart
ios/: flutter_soloud.podspec
ios/flutter_soloud/: Package.swift
lib/src/: enums.dart  mixing_bus.dart  soloud.dart
lib/src/bindings/: bindings_player.dart  bindings_player_ffi.dart  bindings_player_web.dart  js_extension.dart
lib/src/exceptions/: exceptions.dart  exceptions_from_cpp.dart  exceptions_from_dart.dart
lib/src/filters/: filters.dart  parametric_eq.dart
linux/: CMakeLists.txt
macos/: flutter_soloud.podspec
macos/flutter_soloud/: Package.swift
src/: CMakeLists.txt  Configure.cmake  bindings.cpp  enums.h  flutter_soloud.cpp  player.cpp
src/audiobuffer/: audiobuffer.cpp  mp3_stream_decoder.cpp  mp3_stream_decoder.h  stream_decoder.cpp  stream_decoder.h
src/filters/: filters.cpp  parametric_eq_filter.cpp  parametric_eq_filter.h
src/soloud/src/backend/miniaudio/: soloud_miniaudio.cpp
src/soloud/src/core/: soloud_filter.cpp
src/waveform/: waveform.cpp
web/: libflutter_soloud_plugin.js  libflutter_soloud_plugin.wasm
